# looper

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RUNNER-CONTRACT.md  SKILL.md  install.ps1  install.sh  looper-spec.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
commands/: README.md  looper.md
conformance/: check_runner.py
examples/ai-workflow-mapping/: LOOP.md  README.md  RUN_IN_SESSION.md  loop.resolved.json  loop.yaml  run-loop.py
examples/ai-workflow-mapping/inputs/: process-notes.md
examples/ai-workflow-mapping/scripts/: check-loop-doc.py
references/: control-rubric.md  model-detection.md
schemas/: loop.v1.schema.json
scripts/: detect-models.py  looper.py
templates/: README.md  hermes-runner.py  loop.yaml  run-loop.py
templates/loops/: README.md
templates/loops/bug-hunt/: README.md  loop.yaml
templates/loops/bug-hunt/scripts/: check-fix-report.py
templates/loops/code-review/: README.md  loop.yaml
templates/loops/code-review/scripts/: check-review.py
templates/loops/docs-sync/: README.md  loop.yaml
templates/loops/docs-sync/scripts/: check-drift-report.py
templates/loops/research-synthesis/: README.md  loop.yaml
templates/loops/research-synthesis/scripts/: check-citations.py
templates/loops/security-scan/: README.md  loop.yaml
templates/loops/security-scan/scripts/: check-findings.py  scan-secrets.py
tests/: test_looper.py
tests/fixtures/: bad_judge.py  check_contains.py  fake_host.py  fake_judge.py
